# Tensor-Frame

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  contributing.html  getting-started.html  index.html  introduction.html  performance.html  print.html  searchindex.js  toc.html  toc.js
api/: backends.html  index.html  operations.html  tensor.html
backends/: cpu.html  cuda.html  index.html  wgpu.html
crates/core/: Cargo.toml
crates/core/src/: run_functions.rs
crates/cpu_vm/: Cargo.toml
crates/cuda_vm/: Cargo.toml
crates/cuda_vm/src/: lib.rs
crates/device_config/: Cargo.toml
crates/device_config/src/: lib.rs
crates/tensor/: Cargo.toml
crates/tensor/src/: lib.rs
crates/tensor/src/magic_functions/: add.rs  div.rs  eq.rs  index.rs  index_mut.rs  mod.rs  mul.rs  sub.rs
crates/tensor/src/tensor_functions/: constructors.rs  helper.rs  mod.rs
crates/util/: Cargo.toml
crates/util/src/: break_vectors.rs  is_num.rs  lib.rs  run_functions.rs  valid_tensor_type.rs
crates/vm/cpu_vm/: Cargo.toml
crates/vm/cpu_vm/src/: add.rs  div.rs  lib.rs  mul.rs  sub.rs
crates/vm/cuda_vm/: Cargo.toml
crates/vm/cuda_vm/src/: allocate_device.rs  execute_kernel.rs  execution_grid.rs  lib.rs
crates/vm/hip_vm/: Cargo.toml
crates/vm/hip_vm/cuda_vm/: Cargo.toml
crates/vm/hip_vm/cuda_vm/src/: lib.rs  load_kernel.rs
crates/vm/hip_vm/src/: lib.rs
crates/vm/ocl_vm/: Cargo.toml
crates/vm/ocl_vm/src/: lib.rs
crates/vm/wgpu_vm/: Cargo.toml
crates/vm/wgpu_vm/src/: bind_group.rs  buffer.rs  encoder.rs  lib.rs  pipeline.rs  queue.rs  receiver.rs  setup.rs  shader.rs  workload.rs
crates/wgpu_vm/: Cargo.toml
crates/wgpu_vm/src/: bind_group.rs  encoder.rs  lib.rs  queue.rs  setup.rs  shader.rs  workload.rs
examples/: basic.html  broadcasting.html  custom-backends.html  index.html
instructions/cuda/: kernel.cu
instructions/hip/: kernel.cpp
instructions/ocl/: add.cl  div.cl  mul.cl  sub.cl
instructions/wgpu/: Dot.wgsl  div.wgsl
src/: build.rs  cuda.rs  lib.rs  tensor.rs
src/acceleration/: mod.rs  run_functions.rs
src/acceleration/cuda/: mod.rs
src/acceleration/cuda/raw_kernel/: kernel.cu
src/acceleration/wgpu/: break_vec.rs  buffer.rs  mod.rs  pipeline.rs  shader.rs
src/acceleration/wgpu/raw_shader_code/: Dot.wgsl
src/backend/: cpu.rs  cuda.rs  mod.rs  wgpu.rs
src/kernels/: arithmetic.cu  math.cu  matmul.cu
src/tensor/: mod.rs  shape.rs
src/tensor/magic_functions/: add.rs  eq.rs  index.rs  mod.rs  mul.rs  sub.rs
