[package]
name = "tensor_frame"
version = "0.1.1"
edition = "2021"
build = "build/main_build.rs"
repository = "https://github.com/TrainPioneers/fast_tensor"
authors = ["Artur arturmisiurev@gmail.com"]
include = ["/instructions/", "/crates/", "/build/"]

[dependencies]
tensor = { path = "crates/tensor" }
device_config = { path = "crates/device_config" }
util = {path = "crates/util"}

# Only for detecting if use has gpu
wgpu = { version = "23.0.1" }
pollster = "0.4.0"

[features]
prefer-cpu-over-wgpu = []

[workspace]
members = [
    "crates/tensor",
    "crates/util",
    "crates/device_config",
    "crates/vm/cuda_vm",
    "crates/vm/wgpu_vm",
    "crates/vm/hip_vm",
    "crates/vm/ocl_vm",
    "crates/vm/cpu_vm",
]

# Strips the unused code

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
