[package]
name = "tensor_frame"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/TrainPioneers/fast_tensor"
authors = ["Artur arturmisiurev@gmail.com"]
include = ["/instructions/", "/crates/", "/build/"]
description = "Creates a tensor utilizing arrays that can then be manipulated by math operations."

[dependencies]
tensor = { path = "crates/tensor" }
device_config = { path = "crates/device_config" }
util = { path = "crates/util" }

[features]
default = ["device_config/cpu"]
hip = ["device_config/hip"]
cpu = ["device_config/cpu"]
wgpu = ["device_config/wgpu"]
ocl = ["device_config/ocl"]
cuda = ["device_config/cuda"]

[workspace]
members = [
    "crates/tensor",
    "crates/util",
    "crates/device_config",
    "crates/vm/cuda_vm",
    "crates/vm/wgpu_vm",
    "crates/vm/hip_vm",
    "crates/vm/ocl_vm",
    "crates/vm/cpu_vm",
]

# Strips the unused code

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
