[package]
name = "device_config"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cuda_vm = { path = "../vm/hip_vm/cuda_vm", optional = true }
wgpu_vm = { path = "../vm/wgpu_vm", optional = true }
cpu_vm = { path = "../vm/cpu_vm", optional = true }
ocl_vm = { path = "../vm/ocl_vm", optional = true }
hip_vm = { path = "../vm/hip_vm", optional = true }
util = { path = "../util" }

[features]
cpu = ["cpu_vm"]
cuda = ["cuda_vm"]
wgpu = ["wgpu_vm"]
ocl = ["ocl_vm"]
hip = ["hip_vm"]

